[package]
name = "timely-play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timely="*"

[[bin]]
name = "simple"
path = "src/simple.rs"

[[bin]]
name = "merge"
path = "src/merge.rs"

[[bin]]
name = "agg"
path = "src/agg.rs"